--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -12,6 +12,6 @@ jobs:
       - name: Update gist
         uses: matchai/waka-box@master
         env:
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}
-          GIST_ID: 968220c97e8da1d047a9a480fa432e54
-          WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
+          GH_TOKEN: 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
+          GIST_ID: fb7cc1440a17d885ddbd8f79008eaf07
+          WAKATIME_API_KEY: f43fab24-f815-40d3-bd3b-0ebbff9bbe02
